--- a/data/settings.json
+++ b/data/settings.json
@@ -14,13 +14,7 @@
   "cnzzStatisticsUrl": "",
   "simThemeImages": [
     {
-      "src": "https://cdn.jsdelivr.net/gh/jawide/nav@image/sim-wallpaper.jpg",
-      "url": "",
-      "width": null,
-      "height": null
-    },
-    {
-      "src": "https://cdn.jsdelivr.net/gh/jawide/nav@image/nav-1637490885331-ChMkKWF4tn6IeIGwAD5r3l1JSDcAAU-5QFAFu4APmv2924.jpeg",
+      "src": "https://cdn.jsdelivr.net/gh/jawide/nav@image/wallhaven-wq6jdr-2mb.png",
       "url": "",
       "width": null,
       "height": null
