--- a/data/settings.json
+++ b/data/settings.json
@@ -1,10 +1,10 @@
 {
-  "favicon": "https://cdn.jsdelivr.net/gh/jawide/nav@image/logo.png",
-  "homeUrl": "http://jawide.top",
+  "favicon": "https://cdn.jsdelivr.net/gh/jawide/nav-static@image/logo.png",
+  "homeUrl": "http://nav.jawide.top",
   "language": "zh-CN",
   "loading": "random",
   "showGithub": true,
-  "title": "jawide.top",
+  "title": "nav.jawide.top",
   "description": "发现导航 - 精选实用导航网站",
   "keywords": "导航,前端资源,社区站点,设计师,实用工具,学习资源,运营,网络安全,node.js",
   "theme": "Sim",
@@ -14,7 +14,7 @@
   "cnzzStatisticsUrl": "",
   "simThemeImages": [
     {
-      "src": "https://cdn.jsdelivr.net/gh/jawide/nav@image/wallhaven-wq6jdr-2mb.png",
+      "src": "https://cdn.jsdelivr.net/gh/jawide/nav-static@image/wallhaven-wq6jdr-2mb.png",
       "url": "",
       "width": null,
       "height": null
@@ -25,13 +25,13 @@
   "simThemeAutoplay": true,
   "sideThemeImages": [
     {
-      "src": "https://cdn.jsdelivr.net/gh/jawide/nav@image/nav-1637490885331-ChMkKWF4tn6IeIGwAD5r3l1JSDcAAU-5QFAFu4APmv2924.jpeg",
+      "src": "https://cdn.jsdelivr.net/gh/jawide/nav-static@image/nav-1637490885331-ChMkKWF4tn6IeIGwAD5r3l1JSDcAAU-5QFAFu4APmv2924.jpeg",
       "url": "",
       "width": null,
       "height": null
     },
     {
-      "src": "https://cdn.jsdelivr.net/gh/jawide/nav@image/sim-wallpaper.jpg",
+      "src": "https://cdn.jsdelivr.net/gh/jawide/nav-static@image/sim-wallpaper.jpg",
       "url": "",
       "width": null,
       "height": null
@@ -42,7 +42,7 @@
   "shortcutThemeShowWeather": true,
   "shortcutThemeImages": [
     {
-      "src": "https://cdn.jsdelivr.net/gh/jawide/nav@image/nav-1637462542538-0ed801fb13f9e4c29cdfface91eb6c44.jpeg",
+      "src": "https://cdn.jsdelivr.net/gh/jawide/nav-static@image/nav-1637462542538-0ed801fb13f9e4c29cdfface91eb6c44.jpeg",
       "url": "",
       "width": null,
       "height": null
