rebot(CI): Update settings

--- a/data/settings.json
+++ b/data/settings.json
@@ -1,5 +1,5 @@
 {
-  "favicon": "https://cdn.jsdelivr.net/gh/jawide/nav-static@image/logo.png",
+  "favicon": "https://cdn.jsdelivr.net/gh/jawide/nav-static@image/nav-1659950976968-J.ico",
   "homeUrl": "http://nav.jawide.top",
   "language": "zh-CN",
   "loading": "random",
